[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "quickstart_etl"

[tool.poetry]
name = "dagster-starter"
version = "0.1.0"
description = "A simple ETL pipeline using Dagster"
authors = ["Brent Brewington<brent.brewington@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
requests = "~2.31.0"
pandas = "~2.0.3"
dagster = "~1.4.12"

[tool.poetry.group.dev.dependencies]
pytest = "~7.4.2"
